--- a/assignment-two.css
+++ b/assignment-two.css
@@ -1,11 +1,21 @@
 body {
-    background-color: #EAEBF0;
-  font-family: 'IBM Plex Mono', monospace;
-  }
-  
-  .nav-link {
-    color: #0A3258;
-    margin-left: 20px;
-    margin-right:20px;
-    font-size: 15px
-  }
+  background-color: #DBDFE8;
+  color: #161513;
+font-family: 'IBM Plex Mono', monospace;
+}
+
+.nav-link {
+  color: #161513;
+  margin-left: 20px;
+  margin-right:20px;
+  font-size: 16px;
+}
+
+.content {
+  border-top: 2px solid;
+  border-bottom: 2px solid;
+}
+
+.iframe-container {
+  padding-top: 56.25%;
+}
